# experiment-toolkit

./: .gitignore  Dockerfile  README.md  explode-git-tags-into-folders.sh  run-byoqm-on-tags.sh  run-code-climate-on-tags.py  run-modu-on-tags.py  run-modu-on-tags.sh
run-code-climate-on-tags/: .gitignore  README.md  code_climate.py  git.py  main.py  pyproject.toml  run.sh
visualization/: main.py  pyproject.toml
