[tool.poetry]
name = "comparison-graphs"
version = "0.1.0"
description = "Creating graphs on the basis of .csv files"
authors = ["Frederik Rothe <frot@itu.dk>"]
readme = "README.md"
packages = [{include = "comparison_graphs"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
bokeh = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
